--- a/src/main/resources/assets/gtadditions/lang/en_us.lang
+++ b/src/main/resources/assets/gtadditions/lang/en_us.lang
@@ -2844,7 +2844,7 @@ gtadditions.multiblock.reactor.tooltip.2=Coolant is a fluid and can be Steam (15
 gtadditions.multiblock.reactor.tooltip.3=The Nuclear Reactor will drain all coolant stored in hatches scaling with recipe temperature.
 gtadditions.multiblock.reactor.tooltip.4=If there is not enough coolant, the reactor will stop running.
 gtadditions.multiblock.reactor.tooltip.5=If there is too much coolant, the reactor will overclock the recipe.
-gtadditions.multiblock.reactor.tooltip.6=The core of the reactor's material will add more Temperature. Th=0, U=2, Pu=10, Am=15, Cm=25, Bk=35, Cf=50, Es=75, Fm=100, Md=200
+gtadditions.multiblock.reactor.tooltip.6=The core of the reactor's material will add more Temperature. Th=0, Pa=1, U=2, Np=7, Pu=10, Am=15, Cm=25, Bk=35, Cf=50, Es=75, Fm=100, Md=200
 gtadditions.multiblock.reactor.tooltip.7=Tip: A pump cover is a must have in order to regulate coolant, otherwise the reactor will burn fuel too quickly.
 gtadditions.multiblock.reactor.tooltip.8=Tip: Coolant is in a closed loop, so you do not need to keep adding more.
 gtadditions.multiblock.reactor.description=Hatches and buses can be placed on the first or last layer of casings.
